--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: '  '
-subheading: '  '
+heading: 'Phyclops'
+subheading: 'We listen to Plants!'
 banner: 'default'
 ---
 
