--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Phyclops'
-subheading: 'We listen to Plants!'
+heading: 'no effect'
+subheading: 'no effect'
 banner: 'default'
 ---
 
