--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'no effect'
-subheading: 'no effect'
+heading: "no effect"
+subheading: "still no effect"
 banner: 'default'
 ---
 
