--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,5 +23,9 @@
 
     {%- include views/footer.html -%}
 
+
+<a title="GDPR-compliant Web Analytics" href="https://clicky.com/101431853"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async data-id="101431853" src="//static.getclicky.com/js"></script>
+    
   </body>
 </html>
